--- a/assistant-demo/src/main/resources/application.properties
+++ b/assistant-demo/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/server_assistant?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=123456
-##spring.session的配置
+#数据源配置
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/server_assistant?useSSL=false&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456
+#mybatis配置
+#通用Mapper配置
+
+#spring.session的配置
 spring.session.store-type=none
 #
 server.port=9090
 #
 ##security.basic.enabled=true
+
+logging.level.com.feidao.server.assistant.mapper=debug
+
+mybatis-plus.mapper-locations=mapper/*.xml
